--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img src="imgs/banner.png" alt="Computer Repair" class="img-fluid rounded-3 shadow ">
+                    <img src="imgs/banner.png" alt="banner" class="img-fluid rounded-3 shadow ">
                 </div>
             </div>
         </div>
