--- a/index.html
+++ b/index.html
@@ -167,24 +167,24 @@
             <div class="row">
                 <div class="col-lg-5 mb-4 mb-lg-0">
                     <div class="contact-info-item">
-                        <i class="fas fa-map-marker-alt contact-icon"></i>
-                        <div>
-                            <h5 class="mb-1">Dirección</h5>
-                            <p class="text-muted mb-0">Calle de las mascotas #123</p>
+                        <i class="fa fa-map-marker contact-icon"></i>
+                        <div class="contact-text">
+                            <h4 class="mb-1">Domicilio</h4>
+                            <p class="text-muted mb-0">123 Tech Street, Digital City, 12345</p>
                         </div>
                     </div>
                     <div class="contact-info-item">
                         <i class="fas fa-phone contact-icon"></i>
-                        <div>
-                            <h5 class="mb-1">WhatsApp</h5>
+                        <div class="contact-text">
+                            <h4 class="mb-1">WhatsApp</h4>
                             <p class="text-muted mb-0">(000) 123-4567</p>
                         </div>
                     </div>
                     <div class="contact-info-item">
                         <i class="fas fa-envelope contact-icon"></i>
-                        <div>
-                            <h5 class="mb-1">Correo</h5>
-                            <p class="text-muted mb-0">info@nulu-vet.com</p>
+                        <div class="contact-text">
+                            <h4 class="mb-1">Correo</h4>
+                            <p class="text-muted mb-0">info@alphazero-one.com</p>
                         </div>
                     </div>
                 </div>
