--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Servicio Veterinario Integral">
     <meta name="keywords" content="Veterinaría, consultas, peluquería, emergencias">
-    <meta name="author" content="GeekyPawz">
+    <meta name="author" content="Alyrakku">
     <title>NULU-VET</title>
     <link rel="icon" href="imgs/icono1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -225,7 +225,7 @@
             </div>
             <hr class="my-4">
             <div class="text-center text-muted">
-                <small>|&copy; 2024 NULU-VET | Todos los derechos reservados. | <br>Desarrollado por <strong>GeekyPawz.</strong></small>
+                <small>|&copy; 2024 NULU-VET | Todos los derechos reservados. | <br>Desarrollado por <strong>Alyrakku</strong></small>
             </div>
         </div>
     </footer>
